Refazendo a remoção da dependência da classe Base64 após o merge tê-la desfeito.